build: add error prone and nullaway